src/objects/Talent_Appearance__c.object
<CustomObject>
    <description>Join table (junction object) between Creative Shoot and Talent</description>
    <fields>
        <fullName>Creative_Shoot_Name__c</fullName>
        <formula>Creative_Shoot__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shoot Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Shoot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Creative Shoot</label>
        <referenceTo>Creative_Shoot__c</referenceTo>
        <relationshipLabel>Talent Appearances</relationshipLabel>
        <relationshipName>Talent_In_Recording</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Talent_Name__c</fullName>
        <formula>Talent__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Talent Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Talent</label>
        <referenceTo>Talent__c</referenceTo>
        <relationshipLabel>Talent Appearances</relationshipLabel>
        <relationshipName>Talent_Appearances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Talent Appearance</label>
    <nameField>
        <displayFormat>TA-{0}</displayFormat>
        <label>Talent Appearance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talent Appearances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>